@@ -2,10 +2,10 @@ package net.anatolich.iris.domain.settlement;
 
 public class InvalidCurrencyCodeException extends RuntimeException {
     public InvalidCurrencyCodeException(int currencyCode) {
-        super(String.format("invalid currency code: %d", currencyCode));
+        super("invalid currency code: %d".formatted(currencyCode));
     }
 
     public InvalidCurrencyCodeException(String currencyCode) {
-        super(String.format("invalid currency code: %s", currencyCode));
+        super("invalid currency code: %s".formatted(currencyCode));
     }
 }
